fix: layout change in chrome and edge (#16)
To fix layout change in Chrome and Edge, because they seems to add extra margin when we add float.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -56,7 +56,15 @@ p.caption {
   float: left;
   padding: 0.125em 0.125em 0.125em 0.125em;
   margin: -0.03em 0.125em 0em 0em; // 0.0625em 0.125em 0em 0em; for no background
+  line-height: 0.7; // To fix layout change in Chrome and Edge, because they seems to add extra margin when we add float.
 }
+
+
+/* Stylize the post excerpt  */
+.archive__item, .archive__item-excerpt > p {
+  color: #646769;
+}
+
 
 
 /*// For the dt-html widget in R
